--- a/module-1/Numpy/your-code/main.ipynb
+++ b/module-1/Numpy/your-code/main.ipynb
@@ -12,11 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -28,11 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.17.2\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "print(np.__version__)"
    ]
   },
   {
@@ -45,29 +59,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.74069388 0.38433112 0.10397888 0.18478458 0.24673963]\n",
+      "  [0.12190424 0.98033358 0.91607414 0.99717999 0.63584645]\n",
+      "  [0.78128958 0.29689699 0.24975485 0.80531296 0.36142671]]\n",
+      "\n",
+      " [[0.47489462 0.28014345 0.20326961 0.03981962 0.434348  ]\n",
+      "  [0.15400515 0.28338208 0.54666194 0.50196405 0.12947116]\n",
+      "  [0.36442205 0.74571474 0.34583262 0.94909323 0.8217358 ]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 1"
+    "# Method 1\n",
+    "\n",
+    "a = np.random.random((2,3,5))\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.37674114 0.0727033  0.33013306 0.80704053 0.60145958]\n",
+      "  [0.59951141 0.19418142 0.0668133  0.11934796 0.86970367]\n",
+      "  [0.34859486 0.55737893 0.9986331  0.47554747 0.09247199]]\n",
+      "\n",
+      " [[0.45872451 0.66833235 0.39526661 0.24628942 0.14482382]\n",
+      "  [0.36623609 0.43309124 0.52336101 0.38130475 0.33730227]\n",
+      "  [0.68993293 0.74324204 0.60564764 0.46049014 0.22054047]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 2"
+    "# Method 2\n",
+    "\n",
+    "a = np.random.rand(2,3,5)\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1.62434536, -0.61175641, -0.52817175, -1.07296862,\n",
+       "          0.86540763],\n",
+       "        [-2.3015387 ,  1.74481176, -0.7612069 ,  0.3190391 ,\n",
+       "         -0.24937038],\n",
+       "        [ 1.46210794, -2.06014071, -0.3224172 , -0.38405435,\n",
+       "          1.13376944]],\n",
+       "\n",
+       "       [[-1.09989127, -0.17242821, -0.87785842,  0.04221375,\n",
+       "          0.58281521],\n",
+       "        [-1.10061918,  1.14472371,  0.90159072,  0.50249434,\n",
+       "          0.90085595],\n",
+       "        [-0.68372786, -0.12289023, -0.93576943, -0.26788808,\n",
+       "          0.53035547]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 3"
+    "# Method 3\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "np.random.randn(2,3,5)"
    ]
   },
   {
@@ -95,11 +171,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 1]\n",
+      "  [1 1]\n",
+      "  [1 1]]\n",
+      "\n",
+      " [[1 1]\n",
+      "  [1 1]\n",
+      "  [1 1]]\n",
+      "\n",
+      " [[1 1]\n",
+      "  [1 1]\n",
+      "  [1 1]]\n",
+      "\n",
+      " [[1 1]\n",
+      "  [1 1]\n",
+      "  [1 1]]\n",
+      "\n",
+      " [[1 1]\n",
+      "  [1 1]\n",
+      "  [1 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "#array should be 5x3x2\n",
+    "\n",
+    "b =  np.full((5,3,2),1)\n",
+    "\n",
+    "print(b)"
    ]
   },
   {
@@ -127,11 +235,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n",
+      "a and b are same size\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "print(a.size)\n",
+    "print(b.size)\n",
+    "\n",
+    "if a.size == b.size:\n",
+    "    print(\"a and b are same size\")\n",
+    "else:\n",
+    "    print(\"a and b not same size\")"
    ]
   },
   {
@@ -143,11 +269,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n",
+      "(5, 3, 2)\n",
+      "FALSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.shape)\n",
+    "print(b.shape)\n",
+    "\n",
+    "\n",
+    "if a.shape == b.shape:\n",
+    "    print('TRUE')\n",
+    "else:\n",
+    "    print('FALSE')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "# your answer here\n",
+    "\n",
+    "no because they have a different shape"
    ]
   },
   {
@@ -159,11 +313,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 1 1 1 1]\n",
+      "  [1 1 1 1 1]\n",
+      "  [1 1 1 1 1]]\n",
+      "\n",
+      " [[1 1 1 1 1]\n",
+      "  [1 1 1 1 1]\n",
+      "  [1 1 1 1 1]]]\n",
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "c = b.transpose()\n",
+    "\n",
+    "print(c)\n",
+    "print(c.shape)"
    ]
   },
   {
@@ -175,11 +349,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.37674114 1.0727033  1.33013306 1.80704053 1.60145958]\n",
+      "  [1.59951141 1.19418142 1.0668133  1.11934796 1.86970367]\n",
+      "  [1.34859486 1.55737893 1.9986331  1.47554747 1.09247199]]\n",
+      "\n",
+      " [[1.45872451 1.66833235 1.39526661 1.24628942 1.14482382]\n",
+      "  [1.36623609 1.43309124 1.52336101 1.38130475 1.33730227]\n",
+      "  [1.68993293 1.74324204 1.60564764 1.46049014 1.22054047]]]\n",
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "\n",
+    "d = a + c\n",
+    "\n",
+    "print(d)\n",
+    "\n",
+    "print(d.shape)"
    ]
   },
   {
@@ -191,11 +386,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.37674114 0.0727033  0.33013306 0.80704053 0.60145958]\n",
+      "  [0.59951141 0.19418142 0.0668133  0.11934796 0.86970367]\n",
+      "  [0.34859486 0.55737893 0.9986331  0.47554747 0.09247199]]\n",
+      "\n",
+      " [[0.45872451 0.66833235 0.39526661 0.24628942 0.14482382]\n",
+      "  [0.36623609 0.43309124 0.52336101 0.38130475 0.33730227]\n",
+      "  [0.68993293 0.74324204 0.60564764 0.46049014 0.22054047]]]\n",
+      "[[[1.37674114 1.0727033  1.33013306 1.80704053 1.60145958]\n",
+      "  [1.59951141 1.19418142 1.0668133  1.11934796 1.86970367]\n",
+      "  [1.34859486 1.55737893 1.9986331  1.47554747 1.09247199]]\n",
+      "\n",
+      " [[1.45872451 1.66833235 1.39526661 1.24628942 1.14482382]\n",
+      "  [1.36623609 1.43309124 1.52336101 1.38130475 1.33730227]\n",
+      "  [1.68993293 1.74324204 1.60564764 1.46049014 1.22054047]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "\n",
+    "#a is 2x3x5\n",
+    "# d is 2x3x5\n",
+    "\n",
+    "print(a)\n",
+    "print(d)\n",
+    "\n",
+    "#the relation in arrays is the same, two sets of 3 rows and 5 columns"
    ]
   },
   {
@@ -207,11 +431,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.37674114 0.0727033  0.33013306 0.80704053 0.60145958]\n",
+      "  [0.59951141 0.19418142 0.0668133  0.11934796 0.86970367]\n",
+      "  [0.34859486 0.55737893 0.9986331  0.47554747 0.09247199]]\n",
+      "\n",
+      " [[0.45872451 0.66833235 0.39526661 0.24628942 0.14482382]\n",
+      "  [0.36623609 0.43309124 0.52336101 0.38130475 0.33730227]\n",
+      "  [0.68993293 0.74324204 0.60564764 0.46049014 0.22054047]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "e = a*c\n",
+    "\n",
+    "print(e)"
    ]
   },
   {
@@ -223,11 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRUE\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "\n",
+    "if e.any() == a.any():\n",
+    "    print('TRUE')\n",
+    "else:\n",
+    "    print('FALSE')"
    ]
   },
   {
@@ -239,11 +494,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.998633096835238\n",
+      "1.0668133014962284\n",
+      "1.4394949010265254\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "d_max = np.max(d)\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)"
    ]
   },
   {
@@ -255,11 +530,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.37674114 0.0727033  0.33013306 0.80704053 0.60145958]\n",
+      "  [0.59951141 0.19418142 0.0668133  0.11934796 0.86970367]\n",
+      "  [0.34859486 0.55737893 0.9986331  0.47554747 0.09247199]]\n",
+      "\n",
+      " [[0.45872451 0.66833235 0.39526661 0.24628942 0.14482382]\n",
+      "  [0.36623609 0.43309124 0.52336101 0.38130475 0.33730227]\n",
+      "  [0.68993293 0.74324204 0.60564764 0.46049014 0.22054047]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "f = np.empty((2,3,5))\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -275,11 +568,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-dd1310496330>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-35-dd1310496330>\u001b[0m in \u001b[0;36mfunc\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0md_mean\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0md_min\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m             \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m25\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0md_mean\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0md_max\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "def func():\n",
+    "    for i in d:\n",
+    "        if d_mean < i > d_min:\n",
+    "            f = 25\n",
+    "        if d_mean < i > d_max:\n",
+    "            f = 75\n",
+    "        if d_mean == i:\n",
+    "            f = 50\n",
+    "        if d_min == i:\n",
+    "            f = 0\n",
+    "        if d_max == i:\n",
+    "            f = 100\n",
+    "            \n",
+    "func()\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "    for i,array1 in enumerate(d):\n",
+    "        for x,array2 in enumerate(array1):\n",
+    "            for y,array3 in enumerate(array2):\n",
+    "                if array3 > d_min and array3 < d_mean:\n",
+    "                    f[i][x][y] = 25\n",
+    "                if array3 > d_mean and array3 < d_max:\n",
+    "                    f[i][x][y] = 75\n",
+    "                if d_mean == array3:\n",
+    "                     f[i][x][y] = 50\n",
+    "                if d_min == array3:\n",
+    "                     f[i][x][y] = 0\n",
+    "                if d_max == array3:\n",
+    "                     f[i][x][y] = 100    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 25.,  25.,  25.,  75.,  75.],\n",
+       "        [ 75.,  25.,   0.,  25.,  75.],\n",
+       "        [ 25.,  75., 100.,  75.,  25.]],\n",
+       "\n",
+       "       [[ 75.,  75.,  25.,  25.,  25.],\n",
+       "        [ 25.,  25.,  75.,  25.,  25.],\n",
+       "        [ 75.,  75.,  75.,  75.,  25.]]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 10\n",
+      "1 434\n",
+      "2 343\n",
+      "3 452\n",
+      "4 5252\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [10,434,343,452,5252]\n",
+    "\n",
+    "#for index, value in enumerate(list)\n",
+    "\n",
+    "for i, m in enumerate(x):\n",
+    "    print(i,m)"
    ]
   },
   {
@@ -339,7 +735,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "# "
    ]
   }
  ],
@@ -359,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
