--- a/module-1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
+++ b/module-1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
@@ -437,13 +437,14 @@
     }
    ],
    "source": [
-    "# Your code here\n",
-    "\n",
     "for l in letters:\n",
     "    if l in tup3:\n",
     "        print(l, tup3.count(l))\n",
     "    else:\n",
     "        print(False)\n",
+    "        \n",
+    "#Print your code here\n",
+    "        \n",
     "\n"
    ]
   },
