--- a/module-1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
+++ b/module-1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
@@ -479,25 +479,53 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'set1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-fb55a314cfe2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mset6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mset3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mset2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mset6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mset5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'set1' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[67, 98, 25, 19, 95, 14, 83, 84, 97, 9, 69, 82, 98, 70, 21, 47, 4, 45, 83, 30, 53, 43, 21, 36, 25, 72, 45, 99, 12, 23, 13, 95, 68, 66, 20, 65, 41, 24, 25, 69, 18, 73, 60, 59, 28, 32, 45, 30, 17, 4, 92, 39, 76, 98, 79, 87, 59, 10, 31, 16, 76, 66, 43, 75, 9, 88, 32, 71, 96, 30, 7, 32, 44, 88, 75, 56, 41, 16, 4, 54]\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
     "\n",
+    "import random\n",
+    "\n",
+    "sample_list_1 = random.sample(range(1, 100), 80)\n",
+    "\n",
+    "#print(sample_list_1)\n",
+    "\n",
+    "set1 = set(sample_list_1)\n",
+    "\n",
+    "#print(set1)\n",
+    "\n",
+    "sample_list_2  = [] \n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.sample(range(1, 100), 1)[0])\n",
+    "print(sample_list_2)\n",
+    "\n",
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "#print(set2)\n",
+    "\n",
+    "#len(set2)\n",
+    "\n",
+    "set3 = set1 - set2\n",
+    "\n",
+    "#print(set3)\n",
+    "\n",
+    "len(set3)\n",
+    "\n",
     "set6 = set()\n",
     "\n",
     "set3 = set1 - set2\n",
     "\n",
-    "set6.update(set3,set5)"
+    "set5 = set1 & set2 \n",
+    "\n",
+    "#print(set5)\n",
+    "\n",
+    "set6.update(set3, set5)\n",
+    "\n"
    ]
   },
   {
@@ -509,11 +537,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRUE\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "if set1 == set6:\n",
+    "    print(\"TRUE\")\n"
    ]
   },
   {
