--- a/module-1/Numpy/your-code/main.ipynb
+++ b/module-1/Numpy/your-code/main.ipynb
@@ -672,10 +672,10 @@
    "source": [
     "x = [10,434,343,452,5252]\n",
     "\n",
-    "#for index, value in enumerate(list)\n",
-    "\n",
     "for i, m in enumerate(x):\n",
-    "    print(i,m)"
+    "    print(i,m)\n",
+    "    \n",
+    "#for index, value in enumerate(list)"
    ]
   },
   {
