--- a/module-1/Functional-Programming/your-code/Q1.ipynb
+++ b/module-1/Functional-Programming/your-code/Q1.ipynb
@@ -27,9 +27,10 @@
     "\n",
     "# Define function\n",
     "def get_bow_from_docs(docs, stop_words=[]):\n",
-    "    \n",
     "    # In the function, first define the variables you will use such as `corpus`, `bag_of_words`, and `term_freq`.\n",
-    "    \n",
+    "    corpus = \n",
+    "    bag_of_words = \n",
+    "    term_freq = \n",
     "    \n",
     "    \n",
     "    \"\"\"\n",
@@ -170,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
