--- a/module-1/Intro-Pandas/your-code/main.ipynb
+++ b/module-1/Intro-Pandas/your-code/main.ipynb
@@ -18,11 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -43,11 +46,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     5.7\n",
+      "1    75.2\n",
+      "2    74.4\n",
+      "3    84.0\n",
+      "4    66.5\n",
+      "5    66.3\n",
+      "6    55.8\n",
+      "7    75.7\n",
+      "8    29.1\n",
+      "9    43.7\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "lst = [5.7, 75.2, 74.4, 84.0, 66.5, 66.3, 55.8, 75.7, 29.1, 43.7]\n",
+    "\n",
+    "a = pd.Series(lst)\n",
+    "\n",
+    "print(a)\n",
+    "\n"
    ]
   },
   {
@@ -61,11 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "a[2]"
    ]
   },
   {
@@ -95,11 +136,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1  column2  column3  column4  column5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "b = [[53.1, 95.0, 67.5, 35.0, 78.4],\n",
+    "     [61.3, 40.8, 30.8, 37.8, 87.6],\n",
+    "     [20.6, 73.2, 44.2, 14.6, 91.8],\n",
+    "     [57.4, 0.1, 96.1, 4.2, 69.5],\n",
+    "     [83.6, 20.5, 85.4, 22.8, 35.9],\n",
+    "     [49.0, 69.0, 0.1, 31.8, 89.1],\n",
+    "     [23.3, 40.7, 95.0, 83.8, 26.9],\n",
+    "     [27.6, 26.4, 53.8, 88.8, 68.5],\n",
+    "     [96.6, 96.4, 53.4, 72.4, 50.1],\n",
+    "     [73.7, 39.0, 43.2, 81.6, 34.7]]\n",
+    "\n",
+    "df = pd.DataFrame(b, columns=['column1','column2','column3','column4','column5'])\n",
+    "print(df)"
    ]
   },
   {
@@ -120,11 +193,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "b = [[53.1, 95.0, 67.5, 35.0, 78.4],\n",
+    "     [61.3, 40.8, 30.8, 37.8, 87.6],\n",
+    "     [20.6, 73.2, 44.2, 14.6, 91.8],\n",
+    "     [57.4, 0.1, 96.1, 4.2, 69.5],\n",
+    "     [83.6, 20.5, 85.4, 22.8, 35.9],\n",
+    "     [49.0, 69.0, 0.1, 31.8, 89.1],\n",
+    "     [23.3, 40.7, 95.0, 83.8, 26.9],\n",
+    "     [27.6, 26.4, 53.8, 88.8, 68.5],\n",
+    "     [96.6, 96.4, 53.4, 72.4, 50.1],\n",
+    "     [73.7, 39.0, 43.2, 81.6, 34.7]]\n",
+    "\n",
+    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(b, columns=colnames)\n",
+    "\n",
+    "print(df)"
    ]
   },
   {
@@ -136,11 +245,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>61.3</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>57.4</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>26.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>68.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>96.6</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>73.7</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_3  Score_5\n",
+       "0     53.1     67.5     78.4\n",
+       "1     61.3     30.8     87.6\n",
+       "2     20.6     44.2     91.8\n",
+       "3     57.4     96.1     69.5\n",
+       "4     83.6     85.4     35.9\n",
+       "5     49.0      0.1     89.1\n",
+       "6     23.3     95.0     26.9\n",
+       "7     27.6     53.8     68.5\n",
+       "8     96.6     53.4     50.1\n",
+       "9     73.7     43.2     34.7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "df[['Score_1','Score_3','Score_5']]"
    ]
   },
   {
@@ -152,11 +373,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.95000000000001"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "\n",
+    "b = [[53.1, 95.0, 67.5, 35.0, 78.4],\n",
+    "     [61.3, 40.8, 30.8, 37.8, 87.6],\n",
+    "     [20.6, 73.2, 44.2, 14.6, 91.8],\n",
+    "     [57.4, 0.1, 96.1, 4.2, 69.5],\n",
+    "     [83.6, 20.5, 85.4, 22.8, 35.9],\n",
+    "     [49.0, 69.0, 0.1, 31.8, 89.1],\n",
+    "     [23.3, 40.7, 95.0, 83.8, 26.9],\n",
+    "     [27.6, 26.4, 53.8, 88.8, 68.5],\n",
+    "     [96.6, 96.4, 53.4, 72.4, 50.1],\n",
+    "     [73.7, 39.0, 43.2, 81.6, 34.7]]\n",
+    "\n",
+    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(b, columns=colnames)\n",
+    "\n",
+    "#print(df)\n",
+    "\n",
+    "df['Score_3'].mean()"
    ]
   },
   {
@@ -168,11 +421,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.8"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "df['Score_4'].max()"
    ]
   },
   {
@@ -184,11 +450,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.75"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "df['Score_2'].median()"
    ]
   },
   {
@@ -221,11 +500,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Description  Quantity  UnitPrice  Revenue\n",
+      "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+      "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+      "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+      "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+      "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+      "5                      POPCORN HOLDER         7       0.85     5.95\n",
+      "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+      "7                       PARTY BUNTING         4       4.95    19.80\n",
+      "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+      "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "orders = {'Description': ['LUNCH BAG APPLE DESIGN',\n",
+    "  'SET OF 60 VINTAGE LEAF CAKE CASES ',\n",
+    "  'RIBBON REEL STRIPES DESIGN ',\n",
+    "  'WORLD WAR 2 GLIDERS ASSTD DESIGNS',\n",
+    "  'PLAYING CARDS JUBILEE UNION JACK',\n",
+    "  'POPCORN HOLDER',\n",
+    "  'BOX OF VINTAGE ALPHABET BLOCKS',\n",
+    "  'PARTY BUNTING',\n",
+    "  'JAZZ HEARTS ADDRESS BOOK',\n",
+    "  'SET OF 4 SANTA PLACE SETTINGS'],\n",
+    " 'Quantity': [1, 24, 1, 2880, 2, 7, 1, 4, 10, 48],\n",
+    " 'UnitPrice': [1.65, 0.55, 1.65, 0.18, 1.25, 0.85, 11.95, 4.95, 0.19, 1.25],\n",
+    " 'Revenue': [1.65, 13.2, 1.65, 518.4, 2.5, 5.95, 11.95, 19.8, 1.9, 60.0]}\n",
+    "\n",
+    "orders_df = pd.DataFrame(orders)\n",
+    "\n",
+    "print(orders_df)\n"
    ]
   },
   {
@@ -237,11 +552,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2978\n",
+      "637.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "tot_qty = orders_df['Quantity'].sum()\n",
+    "print(tot_qty)\n",
+    "\n",
+    "tot_rev = orders_df['Revenue'].sum()\n",
+    "print(tot_rev)"
    ]
   },
   {
@@ -253,12 +583,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.95\n",
+      "0.18\n",
+      "11.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "\n",
+    "max_price = orders_df['UnitPrice'].max()\n",
+    "\n",
+    "print(max_price)\n",
+    "\n",
+    "min_price = orders_df['UnitPrice'].min()\n",
+    "\n",
+    "print(min_price)\n",
+    "\n",
+    "print(max_price -  min_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -277,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
