Dataframe-Calculations Lab

--- a/module-1/Dataframe-Calculations/your-code/challenge-2.ipynb
+++ b/module-1/Dataframe-Calculations/your-code/challenge-2.ipynb
@@ -33,24 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Importing the dataset from Ironhack's database"
    ]
   },
   {
@@ -77,11 +66,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Total' column is the sum of all the pokemon's powers ('HP', 'Attack', 'Defense', 'Sp Atk', 'Sp Def', 'Speed').\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "hp= np.array(pokemon_dataset['HP'])\n",
+    "total = np.array(pokemon_dataset['Total'])\n",
+    "attack = np.array(pokemon_dataset['Attack'])\n",
+    "defense = np.array(pokemon_dataset['Defense'])\n",
+    "sp_atk = np.array(pokemon_dataset['Sp. Atk'])\n",
+    "sp_def = np.array(pokemon_dataset['Sp. Def'])\n",
+    "speed = np.array(pokemon_dataset['Speed'])\n",
+    "\n",
+    "powers_sum = hp + attack + defense + sp_atk + sp_def + speed\n",
+    "if total.all() == powers_sum.all():\n",
+    "    print(\"'Total' column is the sum of all the pokemon's powers ('HP', 'Attack', 'Defense', 'Sp Atk', 'Sp Def', 'Speed').\")\n",
+    "else:\n",
+    "    print(\"'Total' relation with the others columns is unknown.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is met for all pokemons\n"
+     ]
+    }
+   ],
+   "source": [
+    "Powers_sum = pokemon_dataset['HP'] + pokemon_dataset['Attack'] + pokemon_dataset['Defense'] + pokemon_dataset['Sp. Atk'] + pokemon_dataset['Sp. Def'] + pokemon_dataset['Speed']\n",
+    "Powers_sum\n",
+    "if pokemon_dataset['Total'].all() == Powers_sum.all():\n",
+    "    print(\"It is met for all pokemons\")\n",
+    "else:\n",
+    "    print(\"Condition not met for all pokemons\")"
    ]
   },
   {
@@ -118,12 +150,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# your code here"
+    "df5 = pokemon_dataset[['Type 1', 'Type 2]]\n",
+    "df5 = pd.get_dummies(df5)\n",
+    "df5"
    ]
   },
   {
@@ -141,15 +173,6 @@
     "#### How to identify the relationship between `Total` and the encoded pokemon type fields?\n",
     "\n",
     "There are multiple ways to answer this question. The easiest way is to use correlation. In the cell below, calculate the correlation of `Total` to each of the encoded fields. Rank the correlations and identify the #1 pokemon type that is most likely to have the highest `Total`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here"
    ]
   },
   {
@@ -187,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
