--- a/module-1/Error-Handling/your-code/main.ipynb
+++ b/module-1/Error-Handling/your-code/main.ipynb
@@ -33,15 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-8daa6a76dd8b>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-8daa6a76dd8b>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    print(sqrt_for_all(100..))\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not successful, the function errored out\n"
      ]
     }
    ],
@@ -63,7 +62,7 @@
     "        print(\"please enter a valid number\")\n",
     "        \n",
     "try:  \n",
-    "    print(sqrt_for_all(100..))\n",
+    "    print(sqrt_for_all(a))\n",
     "except(RuntimeError, TypeError, NameError, SyntaxError):\n",
     "    print(\"not successful, the function errored out\")\n",
     "\n"
@@ -71,13 +70,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modify the code below to handle zero as well. In the case of zero, return zero\n",
     "\n",
+    "import math\n",
+    "\n",
     "def divide(x, y):\n",
+    "    if y == 0:\n",
+    "        return 0\n",
+    "    elif y != 0:\n",
+    "        return x / y\n",
+    "    else:\n",
+    "        raise ValueError(\"The value you entered is not valid\")\n",
+    "        print(\"please enter a valid number\")\n",
+    "try: \n",
+    "    divide(5,0)\n",
+    "except(RuntimeError, TypeError, NameError, SyntaxError):\n",
+    "    print(\"not successful, the function errored out\")\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    \"\"\"\n",
     "    This function will take any two real numbers \n",
     "    and return their quotient. \n",
@@ -90,9 +118,8 @@
     "    Sample Output: 5.0\n",
     "    \"\"\"\n",
     "    \n",
-    "    return x / y\n",
     "\n",
-    "divide(5, 0)"
+    "divide(5,0)\n"
    ]
   },
   {
@@ -104,6 +131,8 @@
     "# Modify the function below that it will take either an number and a list or two numbers. \n",
     "# If we take two numbers, add them together and return a list of length 1. \n",
     "# Otherwise, add the number to every element of the list and return the resulting list\n",
+    "\n",
+    "import math\n",
     "\n",
     "def add_elements(a, l):\n",
     "    \"\"\"\n",
