--- a/module-1/Dataframe-Calculations/your-code/challenge-1.ipynb
+++ b/module-1/Dataframe-Calculations/your-code/challenge-1.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "[800 rows x 13 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
        "4       60       50     65           1      False     charmander  1.209302  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        "429       9.0  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
        "230      5           2      False  shuckle  0.043478  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
        "4          Fire  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1608,7 @@
        "348     3.000  Water-Dark  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
        "[154 rows x 1 columns]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1781,213 +1781,82 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
        "      <th>AD_Ratio</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Combo type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>Rock-Steel</td>\n",
-       "      <td>432.333333</td>\n",
-       "      <td>456.666667</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>49.666667</td>\n",
-       "      <td>143.666667</td>\n",
-       "      <td>54.666667</td>\n",
-       "      <td>33.333333</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.348255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Fire-Rock</td>\n",
-       "      <td>219.000000</td>\n",
-       "      <td>410.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>120.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.416667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Steel-Ground</td>\n",
-       "      <td>208.000000</td>\n",
-       "      <td>560.000000</td>\n",
-       "      <td>75.000000</td>\n",
-       "      <td>105.000000</td>\n",
-       "      <td>215.000000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.484239</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Fairy-Flying</td>\n",
-       "      <td>322.000000</td>\n",
-       "      <td>475.000000</td>\n",
-       "      <td>70.000000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>90.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.498452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Water-Fairy</td>\n",
-       "      <td>183.500000</td>\n",
-       "      <td>335.000000</td>\n",
-       "      <td>85.000000</td>\n",
-       "      <td>35.000000</td>\n",
-       "      <td>65.000000</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.512500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Rock-Flying</td>\n",
-       "      <td>354.250000</td>\n",
-       "      <td>524.500000</td>\n",
-       "      <td>72.500000</td>\n",
-       "      <td>123.000000</td>\n",
-       "      <td>65.000000</td>\n",
-       "      <td>79.000000</td>\n",
-       "      <td>115.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.961589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Bug-Ghost</td>\n",
-       "      <td>292.000000</td>\n",
-       "      <td>236.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>90.000000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Ground-Steel</td>\n",
-       "      <td>530.000000</td>\n",
-       "      <td>508.000000</td>\n",
-       "      <td>110.000000</td>\n",
-       "      <td>135.000000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>88.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Water-Dark</td>\n",
-       "      <td>347.666667</td>\n",
-       "      <td>493.833333</td>\n",
-       "      <td>69.166667</td>\n",
-       "      <td>120.000000</td>\n",
-       "      <td>65.166667</td>\n",
-       "      <td>88.833333</td>\n",
-       "      <td>87.166667</td>\n",
-       "      <td>3.166667</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2.291949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Psychic-Dark</td>\n",
-       "      <td>720.000000</td>\n",
-       "      <td>680.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>160.000000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>170.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.666667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>154 rows × 10 columns</p>\n",
+       "<p>154 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       #       Total          HP      Attack     Defense  \\\n",
-       "Combo type                                                                 \n",
-       "Rock-Steel    432.333333  456.666667   50.000000   49.666667  143.666667   \n",
-       "Fire-Rock     219.000000  410.000000   50.000000   50.000000  120.000000   \n",
-       "Steel-Ground  208.000000  560.000000   75.000000  105.000000  215.000000   \n",
-       "Fairy-Flying  322.000000  475.000000   70.000000   45.000000   90.000000   \n",
-       "Water-Fairy   183.500000  335.000000   85.000000   35.000000   65.000000   \n",
-       "...                  ...         ...         ...         ...         ...   \n",
-       "Rock-Flying   354.250000  524.500000   72.500000  123.000000   65.000000   \n",
-       "Bug-Ghost     292.000000  236.000000    1.000000   90.000000   45.000000   \n",
-       "Ground-Steel  530.000000  508.000000  110.000000  135.000000   60.000000   \n",
-       "Water-Dark    347.666667  493.833333   69.166667  120.000000   65.166667   \n",
-       "Psychic-Dark  720.000000  680.000000   80.000000  160.000000   60.000000   \n",
+       "              AD_Ratio\n",
+       "Combo type            \n",
+       "Rock-Steel    0.348255\n",
+       "Fire-Rock     0.416667\n",
+       "Steel-Ground  0.484239\n",
+       "Fairy-Flying  0.498452\n",
+       "Water-Fairy   0.512500\n",
+       "...                ...\n",
+       "Rock-Flying   1.961589\n",
+       "Bug-Ghost     2.000000\n",
+       "Ground-Steel  2.250000\n",
+       "Water-Dark    2.291949\n",
+       "Psychic-Dark  2.666667\n",
        "\n",
-       "                 Sp. Atk       Speed  Generation  Legendary  AD_Ratio  \n",
-       "Combo type                                                             \n",
-       "Rock-Steel     54.666667   33.333333    4.000000        0.0  0.348255  \n",
-       "Fire-Rock      80.000000   30.000000    2.000000        0.0  0.416667  \n",
-       "Steel-Ground   55.000000   30.000000    2.000000        0.0  0.484239  \n",
-       "Fairy-Flying  100.000000   60.000000    3.000000        0.0  0.498452  \n",
-       "Water-Fairy    40.000000   45.000000    2.000000        0.0  0.512500  \n",
-       "...                  ...         ...         ...        ...       ...  \n",
-       "Rock-Flying    79.000000  115.000000    3.000000        0.0  1.961589  \n",
-       "Bug-Ghost      30.000000   40.000000    3.000000        0.0  2.000000  \n",
-       "Ground-Steel   50.000000   88.000000    5.000000        0.0  2.250000  \n",
-       "Water-Dark     88.833333   87.166667    3.166667        0.0  2.291949  \n",
-       "Psychic-Dark  170.000000   80.000000    6.000000        1.0  2.666667  \n",
-       "\n",
-       "[154 rows x 10 columns]"
+       "[154 rows x 1 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
